--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "foliage",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "A cursor like tree data structure on top of sprout.",
   "main": "dist/Foliage.js",
   "scripts": {
@@ -15,6 +15,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "diode": "^4.0.0",
     "sprout-data": "^0.2.1"
   },
   "devDependencies": {
