--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "diode": "^4.0.0",
-    "sprout-data": "^0.2.1"
+    "diode": "^4.1.1"
   },
   "devDependencies": {
     "babel": "^5.x.x",
