--- a/package.json
+++ b/package.json
@@ -35,11 +35,7 @@
     "karma-sinon-chai": "^0.3.0",
     "karma-sourcemap-loader": "^0.3.4",
     "karma-webpack": "^1.3.1",
-    "raw-loader": "^0.5.1",
-    "react": ">= 0.13.1",
-    "react-tools": ">= 0.13.1",
     "source-map-loader": "^0.1.3",
-    "webpack": "^1.7.2",
-    "webpack-dev-server": "^1.7.0"
+    "webpack": "^1.7.2"
   }
 }
