--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "foliage",
-  "version": "0.16.0-rc2",
+  "version": "0.16.0",
   "description": "A cursor like tree data structure.",
   "main": "src/Foliage.js",
   "scripts": {
