--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "coveralls": "make test-coverage",
     "release": "make release",
     "prepublish": "make build",
-    "test": "make test"
+    "test": "make test",
+    "test:watch": "make test-watch"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
     "coveralls": "^2.11.2",
     "istanbul-instrumenter-loader": "^0.1.2",
     "karma": "^0.12.32",
+    "karma-chrome-launcher": "^0.1.8",
     "karma-coverage": "^0.2.7",
     "karma-firefox-launcher": "^0.1.3",
     "karma-mocha": "^0.1.10",
