--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "test": "make test",
     "test:watch": "make test-watch"
   },
+  "contributors": [{
+    "name": "Nate Hunzaker",
+    "email": "nate.hunzaker@viget.com",
+    "url": "http://viget.com"
+  }],
   "repository": {
     "type": "git",
     "url": "git://github.com/vigetlabs/foliage.git"
@@ -22,7 +27,7 @@
     "karma": "^0.12.32",
     "karma-chrome-launcher": "^0.1.8",
     "karma-cli": "0.0.4",
-    "karma-coverage": "^0.2.7",
+    "karma-coverage": "^0.3.1",
     "karma-firefox-launcher": "^0.1.3",
     "karma-mocha": "^0.1.10",
     "karma-sinon-chai": "^0.3.0",
