--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "foliage",
   "version": "0.16.0",
+  "private": true,
   "description": "A cursor like tree data structure.",
   "main": "src/Foliage.js",
   "scripts": {
