[update] Build settings

--- a/.babelrc
+++ b/.babelrc
@@ -3,10 +3,11 @@
   "loose": true,
   "sourceMaps": "inline",
   "optional"  : [
+    "minification.inlineExpressions",
     "minification.propertyLiterals",
     "minification.memberExpressionLiterals",
     "utility.inlineEnvironmentVariables",
-    "utility.inlineExpressions"
+    "spec.undefinedToVoid"
   ],
   "blacklist" : [ "strict" ]
 }
