--- a/package.json
+++ b/package.json
@@ -23,18 +23,21 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "babel": "^5.x.x",
-    "babel-loader": "^5.x.x",
-    "babel-runtime": "^5.x.x",
-    "istanbul-instrumenter-loader": "^0.1.2",
-    "karma": "^0.12.32",
-    "karma-chrome-launcher": "^0.1.8",
-    "karma-cli": "0.0.4",
-    "karma-coverage": "^0.3.1",
-    "karma-firefox-launcher": "^0.1.3",
-    "karma-mocha": "^0.1.10",
-    "karma-sinon-chai": "^0.3.0",
-    "karma-sourcemap-loader": "^0.3.4",
-    "karma-webpack": "^1.3.1"
+    "babel": "~5",
+    "babel-loader": "~5",
+    "babel-runtime": "~5",
+    "istanbul-instrumenter-loader": "~0.1",
+    "karma": "0.12.31",
+    "karma-chrome-launcher": "~0.1",
+    "karma-cli": "~0.0",
+    "karma-coverage": "~0.3",
+    "karma-firefox-launcher": "~0.1",
+    "karma-mocha": "~0.1",
+    "karma-sinon-chai": "~0.3",
+    "karma-sourcemap-loader": "~0.3",
+    "karma-webpack": "~1.3"
+  },
+  "dependencies": {
+    "diode": "~4.3"
   }
 }
