--- a/package.json
+++ b/package.json
@@ -27,15 +27,14 @@
     "babel-loader": "~5",
     "babel-runtime": "~5",
     "istanbul-instrumenter-loader": "~0.1",
-    "karma": "0.12.31",
-    "karma-chrome-launcher": "~0.1",
+    "karma": "~0.12",
     "karma-cli": "~0.0",
     "karma-coverage": "~0.3",
     "karma-firefox-launcher": "~0.1",
     "karma-mocha": "~0.1",
+    "karma-nyan-reporter": "~0.0",
     "karma-sinon-chai": "~0.3",
-    "karma-sourcemap-loader": "~0.3",
-    "karma-webpack": "~1.3"
+    "karma-webpack": "~1.5"
   },
   "dependencies": {
     "diode": "~4.3"
