--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "karma-coverage": "~0.3",
     "karma-firefox-launcher": "~0.1",
     "karma-mocha": "~0.1",
+    "karma-mocha-reporter": "^1.0.2",
     "karma-sinon-chai": "~0.3",
     "karma-sourcemap-loader": "^0.3.4",
     "karma-webpack": "~1.5"
