--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
     "karma-coverage": "~0.3",
     "karma-firefox-launcher": "~0.1",
     "karma-mocha": "~0.1",
-    "karma-nyan-reporter": "~0.0",
+    "karma-mocha-reporter": "~1.0",
     "karma-sinon-chai": "~0.3",
+    "karma-sourcemap-loader": "^0.3.5",
     "karma-webpack": "~1.5"
   },
   "dependencies": {
