--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "foliage",
-  "version": "0.24.1-rc1",
+  "version": "0.24.1",
   "private": true,
   "description": "A cursor like tree data structure.",
   "main": "src/Foliage.js",
